--- a/1124.md
+++ b/1124.md
@@ -94,3 +94,25 @@ sudo apt-get install redis-server
 reids-server --version
 ```
 
+## Additionally, If you want to use your own redis.conf
+
+You can create your own Dockerfile that adds a redis.conf from the context into /data/, like so.
+
+```Dockerfile
+FROM redis
+COPY redis.conf /usr/local/etc/redis/redis.conf
+CMD [ "redis-server", "/usr/local/etc/redis/redis.conf" ]
+```
+
+Alternatively, you can specify something along the same lines with docker run options.
+
+
+```Bash
+$ docker run -v /myredis/conf/redis.conf:/usr/local/etc/redis/redis.conf \
+	 --name myredis redis \
+	 redis-server /usr/local/etc/redis/redis.conf
+```
+
+
+
+ 
