--- a/1126.md
+++ b/1126.md
@@ -1,12 +1,13 @@
-# Docker 커맨드 살펴보기 
-docker을 의도한 형태로 구성하고 운영하기 위해서는 docker이 어떠한 커맨드를 지원하는지 살펴보는 것이 필요하다. 이것은 docker 사용자 인터페이스인 CLI(Command Line Interface)의 세부적인 구성을 파악하는 것이 좋다고 판단했다.  
+# Deep Dive Docker CLI(Command Line Interfaces) 
+Docker를 사용하다 느낀 점은 튜토리얼 수준의 명령어의 수준을 벗어나지 못하고, 실제 업무에서 머릿속으로 생각한 조금 복잡한 구성을 Docker로 옮기려고 시도하면 실패한다는 것이다. 이유는 실제 커맨드를 조금만 다르게 조합하더라도 컨테이너의 동작방식이 많이 달라지며, 이런 것들이 조금만 틀어지면 서비스가 원활하게 동작하지 않는다. 그래서 내린 결론은 CLI를 다루는 기본기가 탄탄해야 한다. 내가 입력하는 커맨드가 컨테이너를 어떻게 동작시킬 것인지 머릿속으로 그릴 정도가 되어야 안심하고 서비스에 적용할 수 있다고 생각한다. 다시 말해 내가 Docker CLI을 통하여 터미널에 입력하는 것이 정확하게 어떠한 의도인지 명확하게 파악하는 것이 중요하다. 
+여기에서는 Docker CLI가 가지고 있는 구성을 간략히 살펴보고, 한 로컬에서 Docker 이미지와 컨테이너를 조작하는 방법을 정리하도록 한다.
 
 ## Docker CLI
 
-아무 생각하지 않고 터미널을 열고 `docker` 커맨드를 입력한다.  
+~~다들 고수인 심증은 있지만 물증이 없으니~~ Docker CLI을 잘 모른다는 가정하에, 아무 생각하지 않고 터미널을 열고 `docker` 커맨드를 입력한다.  
 
 ```Bash
-$ `docker` == `docker --help`
+$ docker # docker --help와 동일한 결과
 
 Usage:  docker COMMAND
 
@@ -29,6 +30,7 @@ Commands:
 
 Run 'docker COMMAND --help' for more information on a command.
 ```
+
 터미널에 `docker`만을 입력하면, docker는 아무런 행동을 할 수 없기 때문에 `docker --help`에 해당하는 명령이 출력될 뿐이다. 위의 그림에서 보는 것과 같이 `docker`의 실제 수행은  `Management Commands`와 `Commands` 카테고리에 나열되어 있는 커맨드를 수행해야 한다. 
 
 docker 커맨드에 구성되어 있는 하위 카테고리 커맨드인 `Option`, `Management Command`, `Command`에 대하여 간략히 살펴보도록 한다.
