--- a/1126.md
+++ b/1126.md
@@ -1,8 +1,10 @@
 # Deep Dive Docker CLI(Command Line Interfaces) 
-Docker를 사용하다 느낀 점은 튜토리얼 수준의 명령어의 수준을 벗어나지 못하고, 실제 업무에서 머릿속으로 생각한 조금 복잡한 구성을 Docker로 옮기려고 시도하면 실패한다는 것이다. 이유는 실제 커맨드를 조금만 다르게 조합하더라도 컨테이너의 동작방식이 많이 달라지며, 이런 것들이 조금만 틀어지면 서비스가 원활하게 동작하지 않는다. 그래서 내린 결론은 CLI를 다루는 기본기가 탄탄해야 한다. 내가 입력하는 커맨드가 컨테이너를 어떻게 동작시킬 것인지 머릿속으로 그릴 정도가 되어야 안심하고 서비스에 적용할 수 있다고 생각한다. 다시 말해 내가 Docker CLI을 통하여 터미널에 입력하는 것이 정확하게 어떠한 의도인지 명확하게 파악하는 것이 중요하다. 
-여기에서는 Docker CLI가 가지고 있는 구성을 간략히 살펴보고, 한 로컬에서 Docker 이미지와 컨테이너를 조작하는 방법을 정리하도록 한다.
+Docker를 사용하다 느낀 점은 튜토리얼 수준의 명령어의 수준을 벗어나지 못하고, 실제 업무에서 머릿속으로 생각한 ~~DB와 웹서버와 같이 간단한~~ 조금 복잡한 `아키텍처를 Docker로 옮기려고 시도`하면 실패한다는 것이다. 이유는 `커맨드를 조금만 달리 조합하더라도 컨테이너의 동작방식이 많이 달라`지며, 서비스는 동작하지 않는다. 
 
-## Docker CLI
+그래서 내린 결론은 `CLI를 다루는 기본기가 탄탄`해야 한다. 내가 입력하는 커맨드가 컨테이너를 어떻게 동작시킬 것인지 머릿속으로 그릴 정도가 되어야 안심하고 서비스에 적용할 수준이 된다고 생각한다. 다시 말해 `내가 Docker CLI을 통하여 터미널에 입력하는 것이 정확하게 어떠한 의도인지 명확하게 파악하는 것이 중요`하다. 
+여기에서는 `Docker CLI가 가지고 있는 구성`을 간략히 살펴보고, 한 로컬에서 `Docker 이미지와 컨테이너 조작 방법을 정리`한다.
+
+## Docker CLI 구성
 
 ~~다들 고수인 심증은 있지만 물증이 없으니~~ Docker CLI을 잘 모른다는 가정하에, 아무 생각하지 않고 터미널을 열고 `docker` 커맨드를 입력한다.  
 
@@ -31,9 +33,11 @@ Commands:
 Run 'docker COMMAND --help' for more information on a command.
 ```
 
-터미널에 `docker`만을 입력하면, docker는 아무런 행동을 할 수 없기 때문에 `docker --help`에 해당하는 명령이 출력될 뿐이다. 위의 그림에서 보는 것과 같이 `docker`의 실제 수행은  `Management Commands`와 `Commands` 카테고리에 나열되어 있는 커맨드를 수행해야 한다. 
+터미널에 `docker`만을 입력하면, `Option`, `Management Command`, `Command` 내부에 세부적인 명령어가 나열된다. 실제 docker는 docker 커맨드만으로는 아무 동작도 수행하지 않는다. 따라서 `docker --help`에 해당하는 명령이 출력된다. 
 
-docker 커맨드에 구성되어 있는 하위 카테고리 커맨드인 `Option`, `Management Command`, `Command`에 대하여 간략히 살펴보도록 한다.
+위의 그림에서 보는 것과 같이 `docker`의 실제 수행은  `Management Commands`와 `Commands` 카테고리에 나열되어 있는 커맨드를 수행해야 한다. 
+
+docker 커맨드에 구성되어 있는 하위 카테고리 커맨드인 에 대하여 간략히 살펴보도록 한다.
 
 #### Option
 Docker 엔진의 운영모드, 로깅수준 설정, TLS(Transport Layer Secure) 설정 등을 지원한다. 
@@ -92,9 +96,6 @@ Server:
 
 
 >이런 분리된 환경을 고려하여 보안 전송을 위한 설정을 지원하는 것이 아닐까? (현재 에는 이런 정도로 추측하지만, 스터디 마무리 시점에는 시야가 이런 부분까지 미칠 수 있었으면 좋겠다.
-
-
-
 
 #### Management Command
 
@@ -165,6 +166,8 @@ Commands:
   wait        Block until one or more containers stop, then print their exit codes
 ```
 
+## Docker 이미지와 컨터이너 조작방법
+ 
 ### Docker Run 기본실습 
 
 `busybox`, `elasticsearh` 이미지를 이용하여 기본 동작을 이해한다. 실행에 앞서 터미널에 `docker run --help`을 입력하여 세부적인 사용 방법을 확인한다.
