--- a/1126.md
+++ b/1126.md
@@ -1,7 +1,8 @@
 # Deep Dive Docker CLI(Command Line Interfaces) 
-Docker를 사용하다 느낀 점은 튜토리얼 수준의 명령어의 수준을 벗어나지 못하고, 실제 업무에서 머릿속으로 생각한 ~~DB와 웹서버와 같이 간단한~~ 조금 복잡한 `아키텍처를 Docker로 옮기려고 시도`하면 실패한다는 것이다. 이유는 `커맨드를 조금만 달리 조합하더라도 컨테이너의 동작방식이 많이 달라`지며, 서비스는 동작하지 않는다. 
+Docker를 사용하다 느낀 점은 튜토리얼 수준의 명령어의 수준을 벗어나지 못하고, 실제 업무에서 머릿속으로 생각한 ~~DB와 웹서버와 같이 간단한~~ 조금 복잡한 `아키텍처를 Docker로 옮기려고 시도`하면 실패한다는 것이다. 이유는 `커맨드를 조금만 달리 조합하더라도 컨테이너의 동작방식이 많이 달라`지며, 서비스는 동작하지 않기 때문이다. 
 
-그래서 내린 결론은 `CLI를 다루는 기본기가 탄탄`해야 한다. 내가 입력하는 커맨드가 컨테이너를 어떻게 동작시킬 것인지 머릿속으로 그릴 정도가 되어야 안심하고 서비스에 적용할 수준이 된다고 생각한다. 다시 말해 `내가 Docker CLI을 통하여 터미널에 입력하는 것이 정확하게 어떠한 의도인지 명확하게 파악하는 것이 중요`하다. 
+그래서 내린 결론은 `CLI를 다루는 기본기가 탄탄`해야 한다. 내가 입력하는 커맨드가 컨테이너를 어떻게 동작시킬 것인지 머릿속으로 그릴 정도가 되어야 안심하고 서비스에 적용할 수준이 된다고 생각한다. 다시 말해 `내가 Docker CLI을 통하여 터미널에 입력하는 것이 정확하게 어떠한 의도인지 명확하게 파악하는 것이 중요`하다. 이런 탄탄한 기반 위에 `유연한 클러스터 환경을 구성`이 가능할 것이고, `컨테이너 기반의 마이크로 서비스 구축`도 가능할 것이다. 
+
 여기에서는 `Docker CLI가 가지고 있는 구성`을 간략히 살펴보고, 한 로컬에서 `Docker 이미지와 컨테이너 조작 방법을 정리`한다.
 
 ## Docker CLI 구성
@@ -167,7 +168,7 @@ Commands:
 ```
 
 ## Docker 이미지와 컨터이너 조작방법
- 
+
 ### Docker Run 기본실습 
 
 `busybox`, `elasticsearh` 이미지를 이용하여 기본 동작을 이해한다. 실행에 앞서 터미널에 `docker run --help`을 입력하여 세부적인 사용 방법을 확인한다.
