--- a/1126.md
+++ b/1126.md
@@ -34,13 +34,14 @@ Commands:
 Run 'docker COMMAND --help' for more information on a command.
 ```
 
-터미널에 `docker`만을 입력하면, `Option`, `Management Command`, `Command` 내부에 세부적인 명령어가 나열된다. 실제 docker는 docker 커맨드만으로는 아무 동작도 수행하지 않는다. 따라서 `docker --help`에 해당하는 명령이 출력된다. 
+터미널에 `docker`만을 입력하면, 위의 그림에서 보는 것과 같이 `Options`, `Management Commands`, `Commands`라는 3가지 커맨드 카테고리만 나타날 뿐 `docker` 커맨드만으로는 아무 동작도 수행할 수 없다. 그래서 docker는 `docker --help`에 해당하는 명령이 출력되고 수행을 종료한다. 
 
-위의 그림에서 보는 것과 같이 `docker`의 실제 수행은  `Management Commands`와 `Commands` 카테고리에 나열되어 있는 커맨드를 수행해야 한다. 
+ `docker`의 실제 수행은 `Options` 카테고리에 있는 tag들을 이용하여 docker 엔진의 설정 정보를 변경할 수 있으며, `Management Commands`와 `Commands` 카테고리에 나열된 보조 커맨드(sub-command)를 수행해야 한다. 
 
-docker 커맨드에 구성되어 있는 하위 카테고리 커맨드인 에 대하여 간략히 살펴보도록 한다.
+docker 커맨드에 구성되어 있는 Tag들과 보조 커맨드에 대하여 간략히 살펴보도록 한다.
 
-#### Option
+### Options
+
 Docker 엔진의 운영모드, 로깅수준 설정, TLS(Transport Layer Secure) 설정 등을 지원한다. 
 
 ```Bash
@@ -70,9 +71,8 @@ Options:
 $ docker --version
 Docker version 17.09.0-ce, build afdb6d4
 ```
-근데 이 부분에서 눈여겨 볼 부분은 TLS(Transport Layer Secure) 설정이 있는 것이다. 현재 우리의 상태는 Docker Engine과 Docker CLI가 한대의 호스트에 존재하고 있고, 그렇다고 인식하고 있다.
-docker에 보니 version을 체크하는 기능이 `docker version`이 추가로 지원한다는 것을 알 수 있다. 
-사실 Docker는 클라이언트와 서버로 운영되고 있다는 것을 알 수 있다. 아래에서 설명해야할 `docker version`을 땡겨서 입력하면, 서버와 클라이언트가 구분되어 운영된다는 것을 알 수 있다. 
+
+여기에서 눈여겨 볼 점은 TLS(Transport Layer Secure) 설정이 있는 것이다. TLS는 네트워크 통신에서 전송되는 데이터의 위변조를 막기 위한 전송 방식인데, 설정을 하는 이유는 무엇일까? ~~제가 이정도 알면 여기 없죠.~~ 아직은 모른다. 명확한건 ~~알면 제가 여기 없다는 겁니다.~~ docker의 또다른 커맨트들 살펴보니 version이라는 보조 커맨드가 있는 것이 보인다. 어떤 출력을 보여줄 지 터미널에 `docker version`을 입력하여 유추해보도록 한다.
 
 ```Bash
 $ docker version
@@ -94,13 +94,11 @@ Server:
  Experimental: true
 ```
 
+위의 그림을 보면, Docker는 Client와 Server구조로 이원화되어 동작된다는 것을 알 수 있다. ~~아마도 Server인 Docker Engine과 Client인 Docker CLI가 아닐까 싶다.~~ 우리는 Client와 Server가 하나의 호스트에서 동작하여 인식하지 못하지만, Client와 Server는 분리가 가능할 것으로 보인다. ~~스터디에 이런 내용이 담길 수 있기를 기대합니다.~~
 
+### Management Commands
 
->이런 분리된 환경을 고려하여 보안 전송을 위한 설정을 지원하는 것이 아닐까? (현재 에는 이런 정도로 추측하지만, 스터디 마무리 시점에는 시야가 이런 부분까지 미칠 수 있었으면 좋겠다.
-
-#### Management Command
-
-Docker Engine의 동작을 제어하는 명령어
+Docker Engine의 동작을 제어하는 명령어를 가진다.
 
 ```Bash
 Management Commands:
@@ -118,9 +116,9 @@ Management Commands:
   system      Manage Docker
   volume      Manage volumes
 ```
-#### Command
+### Commands
 
-컨테이너의 동작을 제어하는 명령어
+컨테이너의 동작을 제어하는 명령어를 가진다.
 
 ```Bash
 Commands:
@@ -166,17 +164,23 @@ Commands:
   version     Show the Docker version information
   wait        Block until one or more containers stop, then print their exit codes
 ```
+### 마치며
 
-## Docker 이미지와 컨터이너 조작방법
+~~저걸 다 알아야 한다니~ 삶이 고달프다.~~
+
+
+## Docker 이미지와 컨터이너 다루기
+
+일단 무작정 화면에 Hello world를 찍어보자.
 
 ### Docker Run 기본실습 
 
-`busybox`, `elasticsearh` 이미지를 이용하여 기본 동작을 이해한다. 실행에 앞서 터미널에 `docker run --help`을 입력하여 세부적인 사용 방법을 확인한다.
+여기서는 `busybox`, `elasticsearh` 이미지를 이용하여 기본 동작을 이해한다. 실행에 앞서 터미널에 `docker run --help`을 입력하여 세부적인 사용 방법을 확인한다.
 
 1. 터미널에 `docker run --help` 입력
 
 ```Bash
-> docker run --help                                                           
+$ docker run --help                                                           
                                                                               
 Usage:  docker run [OPTIONS] IMAGE [COMMAND] [ARG...]                         
                                                                               
@@ -233,30 +237,31 @@ Status: Downloaded newer image for busybox:latest
 $ docker run busybox
 ```
 
-> 뭐가 방금 지나갔냐? 순식간에 일어난 일이라!
+~~뭐가 방금 지나갔냐? 순식간에 일어난 일이라!~~
 
 4. `docker ps` 커맨드로 실행 확인
-이런 경우, `docker ps`를 이용한다. 현재로서(?) 모니터링 방법이 없은 우리는 `docker ps`랑 친해져야 한다. 그리고 슬프게도 살아 있는지 육안검사를 수행해야한다. 
+이런 경우, `docker ps`를 이용한다. ~~현재로서(?) 적절한 모니터링 방법이 없는 우리는 `docker ps`랑 친해져야 한다. 그런 다음 슬프게도 살아 있는지 육안검사를 수행해야한다.~~ 
 
 ```Bash
 $ docker ps
 CONTAINER ID  IMAGE     COMMAND   CREATED          STATUS                     PORTS   NAMES
 ```
-"이봐~ 실행이 안되었군." 이라고 생각하시지만, 아래의 명령어를 치시면 생각이 달라질 겁니다.
+"이봐~ 실행이 안되었군." 이라고 생각하시지만, 아래의 명령어를 치시면 아니라는 것을 알 수 있다.
 
 ```Bash
 $ docker ps -a
 CONTAINER ID  IMAGE     COMMAND   CREATED          STATUS                     PORTS   NAMES
 4a601734ce26  busybox   "sh"      11 seconds ago   Exited (0) 10 seconds ago          hopeful_dijkstra
 ```
-`docker ps`에서 container가 나오지 않은 이유는 현재 실행 중인 프로세스만 출력이 되는 명령이기 때문이다. 따라서 활성화된 이력이 있는 모든 컨테이너의 목록을 보기 위해서는 `docker ps -a`를 입력해야 한다. 왜이런 구분이 필요할까?
+`docker ps`에서 container가 나오지 않은 이유는 현재 실행 중인 프로세스만 출력이 되는 명령이기 때문이다. 따라서 우리가 수행한 명령은 `busybox` 이미지를 동작시키자마자 1초만에 수행을 종료하였다는 것을 알 수 있다. 궁금한 점은 Docker Engine에는 `docker ps`와 `docker ps -a`를 구분해야 했을까? 
 
 그 이유를 확인하기 위해서는 또다른 실습을 진행하자.
 
 ### Docker Run 기본실습 
+
 CheckList | Command Options | Description
 -------- | ------------------------------ | ---------------------------------
-[x] | -d, --detach              |           Run container in background and print container ID
+- [ ] | -d, --detach              |           Run container in background and print container ID
 [ ] |   -e, --env list           |            Set environment variables              
 [ ] | -i, --interactive           |         Keep STDIN open even if not attached   
 [ ] |     --link list              |        Add link to another container          
