--- a/1126.md
+++ b/1126.md
@@ -173,7 +173,7 @@ Commands:
 
 일단 무작정 화면에 Hello world를 찍어보자.
 
-### Docker Run 기본실습 
+### `docker run` 기본실습 
 
 여기서는 `busybox`, `elasticsearh` 이미지를 이용하여 기본 동작을 이해한다. 실행에 앞서 터미널에 `docker run --help`을 입력하여 세부적인 사용 방법을 확인한다.
 
@@ -329,7 +329,8 @@ Options:
                                        container(s)
   -w, --workdir string                 Working directory inside the container
 ```
-지금 우리는 이것을 알 수 없다. 추려서 진행해보자.
+지금 우리는 이것을 알 수 없다. 기본 과정에서는 내가 지금까지 한번이라도 본 적있는 Tag들만 추려서 기술하고,
+진행해나가면서 필요한 부분들을 개별적으로 파악하는 방식으로 해보자. 
 
 Name | Command Options | Description
 -------- | ------------------------------ | ---------------------------------
@@ -341,7 +342,8 @@ name |    --name string             |       Assign a name to the container
 rm |    --rm                       |      Automatically remove the container when it exits 
 tty | -t, --tty                       |     Allocate a pseudo-TTY                  
 volume | -v, --volume list                |    Bind mount a volume          
-
+port | -p, --publish list       |           Publish a container's port(s) to the host
+                                       
 
 2. 터미널에 `docker images` 입력 
 `busybox`를 실행하기에 앞서 `docker images`의 결과를 살펴보면, 이미지 로컬 저장소에 `busybox` 이미지가 없다는 것을 확인한다.
@@ -381,28 +383,104 @@ $ docker run busybox
 $ docker ps
 CONTAINER ID  IMAGE     COMMAND   CREATED          STATUS                     PORTS   NAMES
 ```
-"이봐~ 실행이 안되었군." 이라고 생각하시지만, 아래의 명령어를 치시면 아니라는 것을 알 수 있다.
+"어랏~ 내가 커맨드를 잘못 입력했나? 실행이 안된 것 같은데." 라고 생각하시지만, 아래의 명령어를 입력하면, 실행이 되자마자 바로 종료되었다는 것을 알 수 있다. `docker ps`은 현재 구동 중인 컨테이너가 표시 대상이기 때문에 종료된 컨테이너는 표시되지 않는 것이다. 
+
+만약 종료된 컨테이너의 확인이 필요하다면, 터미널에 `docker ps -a`라고 입력해야 한다.
 
 ```Bash
 $ docker ps -a
 CONTAINER ID  IMAGE     COMMAND   CREATED          STATUS                     PORTS   NAMES
 4a601734ce26  busybox   "sh"      11 seconds ago   Exited (0) 10 seconds ago          hopeful_dijkstra
 ```
-`docker ps`에서 container가 나오지 않은 이유는 현재 실행 중인 프로세스만 출력이 되는 명령이기 때문이다. 따라서 우리가 수행한 명령은 `busybox` 이미지를 동작시키자마자 1초만에 수행을 종료하였다는 것을 알 수 있다. 궁금한 점은 Docker Engine에는 `docker ps`와 `docker ps -a`를 구분해야 했을까? 
 
-그 이유를 확인하기 위해서는 또다른 실습을 진행하자.
+그렇다면, Docker 에서는 `docker ps`와 `docker ps -a`를 구분할까? 그 이유를 확인하기 위해서는 또다른 실습을 진행하자.
 
-### Docker Run 기본실습 
+> `--name` 적용
+`--name`은 컨테이너의 이름을 명시한다. 만약 명시하지 않는다면, Docker 엔진에서 랜덤한 이름으로 명명한다.
 
-* Tags
-    - [ ] detach (-d, --detach)
-    - [ ] env (-e, --env list)
-    - [ ] interactive (-i, --interactive)
-    - [ ] link (--link list)
-    - [ ] name (--name string)
-    - [ ] rm (--rm)
-    - [ ] tty (-t, --tty)
-    - [ ] volume (-v, --volume list)
+    * 이름을 명시하지 않은 경우
+    
+    ```Bash 
+    $ docker run --name b01 busybox
+    ```
+
+    ```Bash
+    $ docker ps -a
+    CONTAINER ID  IMAGE    COMMAND   CREATED         STATUS                     PORTS  NAMES
+    177ac385ab9f  busybox  "sh"      13 seconds ago  Exited (0) 12 seconds ago         h01
+    ```
+    * 이름을 명시하지 않은 경우
+    ```Bash 
+    $ docker run busybox
+    ```
+
+    ```Bash
+    $ docker ps -a
+    CONTAINER ID  IMAGE    COMMAND   CREATED         STATUS                     PORTS  NAMES
+    177ac385ab9f  busybox  "sh"      13 seconds ago  Exited (0) 12 seconds ago         hopeful_dijkstra
+    ```
+
+
+
+### `docker run` 기본실습 
+
+본격적인 실습에 진행하기에 앞서 `--name`에 대해 알아보자.
+위의 실습에서 보면, `hopeful_dijkstra`라는 것을 볼 수 있다. 이것은 Docker 엔진에서 설정한 컨테이너의 이름으로 명시적으로 컨테이너를 이름을 정의하지 않으면 랜덤하게 이름을 생성한다. 
+
+
+
+
+
+
+```Bash 
+$ docker run -i --name busybox
+
+```
+
+```Bash
+$ docker exec -t b01 sh
+/ #
+```
+
+```Bash
+$ docker exec -i b01 sh
+```
+
+```Bash
+$ docker exec -i -t b01 sh
+$ docker exec -it b01 sh
+/ # ls
+bin   dev   etc   home  proc  root  sys   tmp   usr   var
+```
+
+```Bash
+> docker ps
+CONTAINER ID  IMAGE    COMMAND   CREATED         STATUS        PORTS  NAMES
+177ac385ab9f  busybox  "sh"      15 seconds ago  Up 13 seconds        b01
+```
+
+내가 웹서비스를 운영하고 특정 시간에 트래픽이 갑자기 몰려드는 시간이 있어 미리 서비스를 위한 웹서버를 증설할 필요가 있다고 가정하자. 이 서버는 유연한 확장을 위해서 내부에 데이터를 저장하지 않는다. 로그도 외부 스토리지에 저장하고, 보여주는 데이터도 외부의 데이터베이스나 캐시를 이용한다. 이런 서비스를 Docker로 구성하는 경우 트래픽이 증가되는 시점에 미리 서비스를 구축하고, 트래픽이 감소하면 웹서버도 줄여나가야 한다. 이런 서비스라면, 웹서버에 대한 컨테이너가 없애는 즉시 컨테이너의 이력 또한 가지고 있을 필요가 없다.    
+그렇다면 여기서 추가적으로 짚고 넘어갈 부분이 있는데, 만약 컨테이너가 동작을 수행하고 종료되면, 컨테이너를 유지 되는 것을 원하지 않는다면, `--rm` 옵션을 사용하면 된다. 
+
+
+#### `--rm` 적용
+
+`--rm`은 컨테이너의 이름을 명시한다. 만약 명시하지 않는다면, Docker 엔진에서 랜덤한 이름으로 명명한다.
+
+
+
+#### `docker run` Check List
+- [ ] detach (-d, --detach)
+- [ ] env (-e, --env list)
+- [ ] interactive (-i, --interactive)
+- [ ] link (--link list)
+- [ ] name (--name string)
+- [ ] rm (--rm)
+- [ ] tty (-t, --tty)
+- [ ] volume (-v, --volume list)
+- [ ] port (-p, --publis list)
+
+
 
 이 부분을 살펴보기 위해서 `docker start`를 커맨드를 확인하자.
 
@@ -422,4 +500,18 @@ Options:
       --help                    Print usage
   -i, --interactive             Attach container's STDIN
 ```
+
+#### `docker run` Check List
+- [x] detach (-d, --detach)
+- [ ] env (-e, --env list)
+- [x] interactive (-i, --interactive)
+- [ ] link (--link list)
+- [x] name (--name string)
+- [x] rm (--rm)
+- [x] tty (-t, --tty)
+- [ ] volume (-v, --volume list)
+- [ ] volume (-p, --publish list)
+
+우리는 이번 실습과정에서 아래의 체크리스트에서 `-d`, `-i`, `-t`, `--rm`, `--name`, `-t`
+
 
