--- a/1126.md
+++ b/1126.md
@@ -173,7 +173,7 @@ Commands:
 
 일단 무작정 화면에 Hello world를 찍어보자.
 
-### `docker run` 기본실습 
+### `docker run` 기본실습 I
 
 여기서는 `busybox`, `elasticsearh` 이미지를 이용하여 기본 동작을 이해한다. 실행에 앞서 터미널에 `docker run --help`을 입력하여 세부적인 사용 방법을 확인한다.
 
@@ -395,22 +395,42 @@ CONTAINER ID  IMAGE     COMMAND   CREATED          STATUS                     PO
 
 그렇다면, Docker 에서는 `docker ps`와 `docker ps -a`를 구분할까? 그 이유를 확인하기 위해서는 또다른 실습을 진행하자.
 
-> `--name` 적용
-`--name`은 컨테이너의 이름을 명시한다. 만약 명시하지 않는다면, Docker 엔진에서 랜덤한 이름으로 명명한다.
-
-* 이름을 명시하지 않은 경우
+### `docker run` 기본실습 II (`--rm`)
 
 ```Bash 
-$ docker run --name b01 busybox
+$ docker run --rm b01 busybox
+```
+
+```Bash
+$ docker ps
+CONTAINER ID  IMAGE     COMMAND   CREATED          STATUS                     PORTS   NAMES
+```
+
+```Bash
+$ docker ps -a
+CONTAINER ID  IMAGE     COMMAND   CREATED          STATUS                     PORTS   NAMES
+```
+
+내가 웹서비스를 운영하고 특정 시간에 트래픽이 갑자기 몰려드는 시간이 있어 미리 서비스를 위한 웹서버를 증설할 필요가 있다고 가정하자. 이 서버는 유연한 확장을 위해서 내부에 데이터를 저장하지 않는다. 로그도 외부 스토리지에 저장하고, 보여주는 데이터도 외부의 데이터베이스나 캐시를 이용한다. 이런 서비스를 Docker로 구성하는 경우 트래픽이 증가되는 시점에 미리 서비스를 구축하고, 트래픽이 감소하면 웹서버도 줄여나가야 한다. 이런 서비스라면, 웹서버에 대한 컨테이너가 없애는 즉시 컨테이너의 이력 또한 가지고 있을 필요가 없다.    
+그렇다면 여기서 추가적으로 짚고 넘어갈 부분이 있는데, 만약 컨테이너가 동작을 수행하고 종료되면, 컨테이너를 유지 되는 것을 원하지 않는다면, `--rm` 옵션을 사용하면 된다. 
+
+### `docker run` 기본실습 III (`--name`)
+
+`--name`은 컨테이너의 이름을 명시적으로 정의한다. 이름을 명시하지 않아도  Docker 엔진에서 명명한 랜덤한 이름으로 컨테이너의 이름을 지정하고 동작한다. 
+
+#### 이름을 명시하는 방법
+
+```Bash 
+$ docker run --rm --name b02 busybox
 ```
 
 ```Bash
 $ docker ps -a
 CONTAINER ID  IMAGE    COMMAND   CREATED         STATUS                     PORTS  NAMES
-177ac385ab9f  busybox  "sh"      13 seconds ago  Exited (0) 12 seconds ago         h01
+177ac385ab9f  busybox  "sh"      13 seconds ago  Exited (0) 12 seconds ago         b02
 ```
 
-* 이름을 명시하지 않은 경우
+#### 이름을 명시하지 않는 방법
 
 ```Bash 
 $ docker run busybox
@@ -422,30 +442,84 @@ CONTAINER ID  IMAGE    COMMAND   CREATED         STATUS                     PORT
 177ac385ab9f  busybox  "sh"      13 seconds ago  Exited (0) 12 seconds ago         hopeful_dijkstra
 ```
 
+#### 컨테이너 정리 (복습)
 
+```Bash
+$ docker rm `docker ps -aq`
+```
 
-### `docker run` 기본실습 
+### `docker run` 기본실습 IV (`-i`, `-t`, `-d`)
 
-본격적인 실습에 진행하기에 앞서 `--name`에 대해 알아보자.
-위의 실습에서 보면, `hopeful_dijkstra`라는 것을 볼 수 있다. 이것은 Docker 엔진에서 설정한 컨테이너의 이름으로 명시적으로 컨테이너를 이름을 정의하지 않으면 랜덤하게 이름을 생성한다. 
+#### `-i`를 사용
 
-
-
-
-
+`-t` 옵션이 설정되지 않아 터미널 없이 컨테이너가 생성되어 키보드 입력 불가
 
 ```Bash 
-$ docker run -i --name busybox
-
+$ docker run --rm -i --name b01 busybox
+_
 ```
 
 ```Bash
-$ docker exec -t b01 sh
+$ docker ps
+CONTAINER ID  IMAGE    COMMAND   CREATED         STATUS          PORTS  NAMES
+177ac385ab9f  busybox  "sh"      13 seconds ago  Up 12 seconds          b01
+```
+
+#### `-t`를 사용
+
+interactive 옵션이 설정되지 않아 터미널은 열렸지만, 입력 불가
+
+```Bash
+$ docker run --rm -t --name b01 busybox
 / #
 ```
 
 ```Bash
+$ docker ps
+CONTAINER ID  IMAGE    COMMAND   CREATED         STATUS          PORTS  NAMES
+177ac385ab9f  busybox  "sh"      13 seconds ago  Up 12 seconds          b01
+```
+
+#### `-it` 또는 `-t -i`를 사용
+
+```Bash
+$ docker run --rm -t --name b01 busybox
+/ # ls
+bin   dev   etc   home  proc  root  sys   tmp   usr   var
+```
+
+
+```Bash
+$ docker run --rm -t --name b01 busybox sh
+/ # ls
+bin   dev   etc   home  proc  root  sys   tmp   usr   var
+```
+
+
+```Bash
+$ docker ps
+CONTAINER ID  IMAGE    COMMAND   CREATED         STATUS          PORTS  NAMES
+177ac385ab9f  busybox  "sh"      13 seconds ago  Up 12 seconds          b01
+```
+
+#### [옵션] `docker exec`
+```Bash
+$ docker exec -it b01 sh
+Error response from daemon: Container 36bc12d4906331074010071c7d7ec46f4cb7b3f81875c89fdc289f1a8b981077 is not running
+```
+
+```Bash
+> docker ps
+CONTAINER ID  IMAGE    COMMAND   CREATED         STATUS        PORTS  NAMES
+177ac385ab9f  busybox  "sh"      15 seconds ago  Up 13 seconds        b01
+```
+
+```Bash
 $ docker exec -i b01 sh
+```
+
+```Bash
+$ docker exec -t b01 sh
 ```
 
 ```Bash
@@ -455,30 +529,19 @@ $ docker exec -it b01 sh
 bin   dev   etc   home  proc  root  sys   tmp   usr   var
 ```
 
-```Bash
-> docker ps
-CONTAINER ID  IMAGE    COMMAND   CREATED         STATUS        PORTS  NAMES
-177ac385ab9f  busybox  "sh"      15 seconds ago  Up 13 seconds        b01
-```
+####
 
-내가 웹서비스를 운영하고 특정 시간에 트래픽이 갑자기 몰려드는 시간이 있어 미리 서비스를 위한 웹서버를 증설할 필요가 있다고 가정하자. 이 서버는 유연한 확장을 위해서 내부에 데이터를 저장하지 않는다. 로그도 외부 스토리지에 저장하고, 보여주는 데이터도 외부의 데이터베이스나 캐시를 이용한다. 이런 서비스를 Docker로 구성하는 경우 트래픽이 증가되는 시점에 미리 서비스를 구축하고, 트래픽이 감소하면 웹서버도 줄여나가야 한다. 이런 서비스라면, 웹서버에 대한 컨테이너가 없애는 즉시 컨테이너의 이력 또한 가지고 있을 필요가 없다.    
-그렇다면 여기서 추가적으로 짚고 넘어갈 부분이 있는데, 만약 컨테이너가 동작을 수행하고 종료되면, 컨테이너를 유지 되는 것을 원하지 않는다면, `--rm` 옵션을 사용하면 된다. 
-
-
-#### `--rm` 적용
-
-`--rm`은 컨테이너의 이름을 명시한다. 만약 명시하지 않는다면, Docker 엔진에서 랜덤한 이름으로 명명한다.
 
 
 
 #### `docker run` Check List
 - [ ] detach (-d, --detach)
 - [ ] env (-e, --env list)
-- [ ] interactive (-i, --interactive)
+- [x] interactive (-i, --interactive)
 - [ ] link (--link list)
-- [ ] name (--name string)
-- [ ] rm (--rm)
-- [ ] tty (-t, --tty)
+- [x] name (--name string)
+- [x] rm (--rm)
+- [x] tty (-t, --tty)
 - [ ] volume (-v, --volume list)
 - [ ] port (-p, --publis list)
 
