--- a/1126.md
+++ b/1126.md
@@ -529,13 +529,15 @@ $ docker exec -it b01 sh
 bin   dev   etc   home  proc  root  sys   tmp   usr   var
 ```
 
-####
+#### `-d` 
 
-
-
+```Bash
+$ docker run -d --name b04 busybox sh
+01c17c134779813af882c520851721e9fd8584e8c2b1c4834633b9e9df074559
+```
 
 #### `docker run` Check List
-- [ ] detach (-d, --detach)
+- [x] detach (-d, --detach)
 - [ ] env (-e, --env list)
 - [x] interactive (-i, --interactive)
 - [ ] link (--link list)
@@ -565,17 +567,6 @@ Options:
       --help                    Print usage
   -i, --interactive             Attach container's STDIN
 ```
-
-#### `docker run` Check List
-- [x] detach (-d, --detach)
-- [ ] env (-e, --env list)
-- [x] interactive (-i, --interactive)
-- [ ] link (--link list)
-- [x] name (--name string)
-- [x] rm (--rm)
-- [x] tty (-t, --tty)
-- [ ] volume (-v, --volume list)
-- [ ] volume (-p, --publish list)
 
 우리는 이번 실습과정에서 아래의 체크리스트에서 `-d`, `-i`, `-t`, `--rm`, `--name`, `-t`
 
