--- a/1126.md
+++ b/1126.md
@@ -166,7 +166,7 @@ Commands:
 ```
 ### 마치며
 
-~~저걸 다 알아야 한다니~ 삶이 고달프다.~~
+~~저걸 다 알아야 한다니~ 삶이 고달프다.~~갈길이 멀긴 하지만, 천리도 한걸음 부터.~~아재인가 속담을..~~
 
 
 ## Docker 이미지와 컨터이너 다루기
@@ -343,6 +343,7 @@ rm |    --rm                       |      Automatically remove the container whe
 tty | -t, --tty                       |     Allocate a pseudo-TTY                  
 volume | -v, --volume list                |    Bind mount a volume          
 port | -p, --publish list       |           Publish a container's port(s) to the host
+workdir | -w, --workdir list       |           Working directory inside the container
                                        
 
 2. 터미널에 `docker images` 입력 
@@ -502,7 +503,54 @@ CONTAINER ID  IMAGE    COMMAND   CREATED         STATUS          PORTS  NAMES
 177ac385ab9f  busybox  "sh"      13 seconds ago  Up 12 seconds          b01
 ```
 
-#### [옵션] `docker exec`
+#### `docker start` 
+이 부분을 살펴보기 위해서 `docker start`를 커맨드를 확인하자.
+
+```Bash
+$ docker start --help
+
+Usage:  docker start [OPTIONS] CONTAINER [CONTAINER...]
+
+Start one or more stopped containers
+
+Options:
+  -a, --attach                  Attach STDOUT/STDERR and forward signals
+      --checkpoint string       Restore from this checkpoint
+      --checkpoint-dir string   Use a custom checkpoint storage directory
+      --detach-keys string      Override the key sequence for detaching a
+                                container
+      --help                    Print usage
+  -i, --interactive             Attach container's STDIN
+```
+
+#### `-p` 
+
+여기서 elasticsearch를 한번 사용해보자.
+
+* -d 옵션을 설정하는 경우
+```Bash
+$ docker run --rm -d --name es01 elsaticsearch
+...
+$ _
+```
+
+* -d 옵션을 설정하지 않은 경우
+```Bash
+$ docker run --rm --name es01 elsaticsearch
+...
+```
+
+위에 보면, elasticsearch  서비스가 구동되어 있고, 외부에서 수집된 정보를 인덱싱을 하기 위하여 서비스에 전송하려고 한다. 그러나 컨테이너는 격리된 독립된 네트워크를 구성하기 때문에 접근이 불가능하다. 호스트 컴퓨터에 컨테이너의 네트워크에 접근하기 위해서는 `docker run`을 수행하는 시점에 네트워크 포트 수준의 접근경로(?)를 설정해야 한다. 이것이 `-p` 옵션이다. 수행해야할 docker 커맨드는 아래와 같다.
+
+* 옵션을 설정하지 않은 경우
+```Bash
+$ docker run -d --rm --name es01 -p 9200:9200 elasticsearch
+...
+```
+
+
+
+#### `docker exec`
 ```Bash
 $ docker exec -it b01 sh
 Error response from daemon: Container 36bc12d4906331074010071c7d7ec46f4cb7b3f81875c89fdc289f1a8b981077 is not running
@@ -536,6 +584,25 @@ $ docker run -d --name b04 busybox sh
 01c17c134779813af882c520851721e9fd8584e8c2b1c4834633b9e9df074559
 ```
 
+```Bash
+$ pwd
+/home/user
+```
+
+#### `-v`
+
+```Bash
+docker run --rm -it --name p09 -v /home/dbuser/materials:/home python /bin/bash
+root@0b797705326e:/# _
+```
+
+#### `-w`
+
+```Bash
+docker run --rm -it --name p09 -v /home/dbuser/materials:/home -w /home python /bin/bash
+root@0b797705326e:/home# _
+```
+
 #### `docker run` Check List
 - [x] detach (-d, --detach)
 - [ ] env (-e, --env list)
@@ -544,30 +611,6 @@ $ docker run -d --name b04 busybox sh
 - [x] name (--name string)
 - [x] rm (--rm)
 - [x] tty (-t, --tty)
-- [ ] volume (-v, --volume list)
-- [ ] port (-p, --publis list)
-
-
-
-이 부분을 살펴보기 위해서 `docker start`를 커맨드를 확인하자.
-
-```Bash
-$ docker start --help
-
-Usage:  docker start [OPTIONS] CONTAINER [CONTAINER...]
-
-Start one or more stopped containers
-
-Options:
-  -a, --attach                  Attach STDOUT/STDERR and forward signals
-      --checkpoint string       Restore from this checkpoint
-      --checkpoint-dir string   Use a custom checkpoint storage directory
-      --detach-keys string      Override the key sequence for detaching a
-                                container
-      --help                    Print usage
-  -i, --interactive             Attach container's STDIN
-```
-
-우리는 이번 실습과정에서 아래의 체크리스트에서 `-d`, `-i`, `-t`, `--rm`, `--name`, `-t`
-
-
+- [x] volume (-v, --volume list)
+- [x] port (-p, --publis list)
+- [x] workdir (-w, --work list)
