add build commit

--- a/1126.md
+++ b/1126.md
@@ -614,3 +614,94 @@ root@0b797705326e:/home# _
 - [x] volume (-v, --volume list)
 - [x] port (-p, --publis list)
 - [x] workdir (-w, --work list)
+
+
+#### `docker commit`
+
+
+```Bash
+$ docker run -it --name p01 python /bin/bash
+# pip install flask
+...
+# exit
+
+$ docker commit p01 mypython:latest
+sha256:79444887fab40186dd6e4ac67a9da2b576821fb1d08fb629334cd145519100a0
+
+$ docker run -it --name mp01 mp python
+Python 3.6.3 (default, Nov  4 2017, 22:17:09)
+[GCC 4.9.2] on linux
+Type "help", "copyright", "credits" or "license" for more information.
+>>> import flask
+>>> exit()
+```
+
+#### `docker build`
+
+```bash
+$ vi Dockerfile
+```
+
+```vi
+[editor]
+FROM Ubuntu:14.04
+RUN apt-get update
+:wq
+```
+
+```Bash
+$ sudo docker build -t myunbuntu .
+Sending build context to Docker daemon 39.66 MB
+Step 1/2 : FROM ubuntu:14.04
+14.04: Pulling from library/ubuntu
+01a4f8387457: Pull complete
+c887940e680c: Pull complete
+5432573ac160: Pull complete
+027ee9a9665e: Pull complete
+5611db80430d: Pull complete
+Digest: sha256:7b3b72e6a388c24c0cc3e0d1aade3364c52f03e54bd5ab440f8fd93c69203733
+Status: Downloaded newer image for ubuntu:14.04
+ ---> d6ed29ffda6b
+Step 2/2 : RUN apt-get update
+ ---> Running in 01c3daffabe2
+Get:1 http://security.ubuntu.com trusty-security InRelease [65.9 kB]
+Ign http://archive.ubuntu.com trusty InRelease
+Get:2 http://archive.ubuntu.com trusty-updates InRelease [65.9 kB]
+Get:3 http://archive.ubuntu.com trusty-backports InRelease [65.9 kB]
+Get:4 http://archive.ubuntu.com trusty Release.gpg [933 B]
+Get:5 http://archive.ubuntu.com trusty Release [58.5 kB]
+Get:6 http://security.ubuntu.com trusty-security/universe Sources [80.1 kB]
+Get:7 http://archive.ubuntu.com trusty-updates/universe Sources [245 kB]
+Get:8 http://security.ubuntu.com trusty-security/main amd64 Packages [859 kB]
+Get:9 http://archive.ubuntu.com trusty-updates/main amd64 Packages [1293 kB]
+Get:10 http://security.ubuntu.com trusty-security/restricted amd64 Packages [18.0 kB]
+Get:11 http://security.ubuntu.com trusty-security/universe amd64 Packages [250 kB]
+Get:12 http://archive.ubuntu.com trusty-updates/restricted amd64 Packages [21.4 kB]
+Get:13 http://security.ubuntu.com trusty-security/multiverse amd64 Packages [4716 B]
+Get:14 http://archive.ubuntu.com trusty-updates/universe amd64 Packages [561 kB]
+Get:15 http://archive.ubuntu.com trusty-updates/multiverse amd64 Packages [16.3 kB]
+Get:16 http://archive.ubuntu.com trusty-backports/main amd64 Packages [14.7 kB]
+Get:17 http://archive.ubuntu.com trusty-backports/restricted amd64 Packages [40 B]
+Get:18 http://archive.ubuntu.com trusty-backports/universe amd64 Packages [52.5 kB]
+Get:19 http://archive.ubuntu.com trusty-backports/multiverse amd64 Packages [1392 B]
+Get:20 http://archive.ubuntu.com trusty/universe Sources [7926 kB]
+Get:21 http://archive.ubuntu.com trusty/main amd64 Packages [1743 kB]
+Get:22 http://archive.ubuntu.com trusty/restricted amd64 Packages [16.0 kB]
+Get:23 http://archive.ubuntu.com trusty/universe amd64 Packages [7589 kB]
+Get:24 http://archive.ubuntu.com trusty/multiverse amd64 Packages [169 kB]
+Fetched 21.1 MB in 24s (849 kB/s)
+Reading package lists...
+ ---> bbdd2ef30da8
+Removing intermediate container 01c3daffabe2
+Successfully built bbdd2ef30da8
+```
+
+```Bash
+$ docker images
+REPOSITORY          TAG                 IMAGE ID            CREATED             SIZE
+myubuntu            latest              bbdd2ef30da8        35 seconds ago      242 MB
+...
+```
+
+
+
